<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CompraComcluida">
    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/banner_resumo_compra" />

    <TextView
        android:id="@+id/resumo_compra_textview_parabens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/parabens"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/resumo_compra_textview_sucesso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compra_sucesso"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_textview_parabens"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_textview_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_textview_parabens"/>

    <TextView
        android:id="@+id/resumo_compra_textview_confira_resumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/conferir_resumo_compra"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_banner_inicial"/>

    <FrameLayout
        android:id="@+id/compra_comcluida_fragemrnt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        class="br.com.unip.pimIV.hotelFazenda.fragment.DetalhesDaCompraFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_textview_confira_resumo" />

</androidx.constraintlayout.widget.ConstraintLayout>