<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/sobre_nos_imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/picinahotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/sobre_nos_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_sobre_nos_part1"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sobre_nos_imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sobre_nos_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_sobre_nos_part2"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="16sp"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sobre_nos_textView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sobre_nos_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_sobre_nos_part3"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="36dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="16sp"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sobre_nos_textView2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>